--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>Prison1.12</groupId>
     <artifactId>Prison</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-ALPHA</version>
     <packaging>jar</packaging>
 
     <name>Prison</name>
